--- a/resources/scss/blocks/_header.scss
+++ b/resources/scss/blocks/_header.scss
@@ -3,8 +3,9 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-.container {
+.product__container {
     min-width: 21em;
+    
 }
 
 /* Header */
