--- a/resources/scss/elements/_quantity-box.scss
+++ b/resources/scss/elements/_quantity-box.scss
@@ -1,72 +1,71 @@
 [data-quantity] {
-    position: relative;
-    width: 100%;
-    max-width: 11rem;
-    padding: 0;
-    margin: 0;
-    border: 0;
-  }
-  
-  [data-quantity] legend {
-    display: none;
-  }
-  
-  [data-quantity] input {
-    font-size: 16px;
-    height: 4rem;
-    color: #000000;
-    background: #f6f6f5;
-    border-color: #c5d1d9;
-    padding: 0 4rem;
-    box-shadow: 0 10px 65px -10px rgba(0, 0, 0, 0.25);
-    text-align: center;
-    width: 100%;
-    box-sizing: border-box;
-    font-weight: lighter;
-  }
-  
-  
-  [data-quantity] button {
-    position: absolute;
-    width: 2.8rem;
-    height: 2.8rem;
-    top: 0.6rem;
-    display: block;
-    padding: 0;
-    margin: 0;
-    border: 0;
-    background: #fff
-      url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="50"><path d="M17 25h16M67 25h16M75 17v16" fill="none" stroke="rgb(59,69,66)" stroke-width="1.5px" stroke-linecap="round" stroke-linejoin="round" /></svg>')
-      no-repeat 0 0;
-    background-size: 5.6rem 2.8rem;
-    overflow: hidden;
-    white-space: nowrap;
-    text-indent: 100%;
-    border-radius: 1.4rem;
-    cursor: pointer;
-    transition: opacity 0.15s;
-    opacity: 0.5;
-  }
-  
-  [data-quantity] button:active {
-    background-position-y: 1px;
-    box-shadow: inset 0 2px 12px -4px #c5d1d9;
-  }
-  
-  [data-quantity] button:focus {
-    outline: none;
-  }
-  
-  [data-quantity] button:hover {
-    opacity: 1;
-  }
-  
-  [data-quantity] button.sub {
-    left: 0.6rem;
-  }
-  
-  [data-quantity] button.add {
-    right: 0.6rem;
-    background-position-x: -2.8rem;
-  }
-  
+  position: relative;
+  width: 100%;
+  max-width: 11rem;
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+[data-quantity] legend {
+  display: none;
+}
+
+[data-quantity] input {
+  font-size: 16px;
+  height: 47px;
+  color: #000000;
+  background: #f6f6f5;
+  border-color: #c5d1d9;
+  padding: 0 4rem;
+  box-shadow: 0 10px 65px -10px rgba(0, 0, 0, 0.25);
+  text-align: center;
+  width: 100%;
+  box-sizing: border-box;
+  font-weight: lighter;
+}
+
+
+[data-quantity] button {
+  position: absolute;
+  width: 2.8rem;
+  height: 2.8rem;
+  top: 0rem;
+  display: block;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  background: #f6f6f5
+    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="50"><path d="M17 25h16M67 25h16M75 17v16" fill="none" stroke="rgb(59,69,66)" stroke-width="1.5px" stroke-linecap="round" stroke-linejoin="round" /></svg>')
+    no-repeat 0 0;
+  background-size: 5.6rem 2.8rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-indent: 100%;
+  border-radius: 1.4rem;
+  cursor: pointer;
+  transition: opacity 0.15s;
+  opacity: 0.5;
+}
+
+[data-quantity] button:active {
+  background-position-y: 1px;
+  box-shadow: inset 0 2px 12px -4px #c5d1d9;
+}
+
+[data-quantity] button:focus {
+  outline: none;
+}
+
+[data-quantity] button:hover {
+  opacity: 1;
+}
+
+[data-quantity] button.sub {
+  left: 0.6rem;
+}
+
+[data-quantity] button.add {
+  right: 0.6rem;
+  background-position-x: -2.8rem;
+}
