Accordion unicode change and size changed

--- a/resources/scss/blocks/_accordions.scss
+++ b/resources/scss/blocks/_accordions.scss
@@ -1,14 +1,36 @@
 /* Style the buttons that are used to open and close the accordion panel */
 .product__accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
+
+    &-button {
+        background-color: #eee;
+        color: #444;
+        cursor: pointer;
+        padding: 18px;
+        width: 100%;
+        text-align: left;
+        border: none;
+        outline: none;
+        transition: 0.4s;
+
+        .active, 
+        &:hover {
+            background-color: #ccc;
+        }
+    
+        &::after {
+            content: "\2212";
+            font-size: 13px;
+            color: #777;
+            float: right;
+            margin-left: 5px;
+            font-size: 27px;
+        }
+        
+        &:not(.active)::after {
+            content: '\002b';
+            font-size: 27px;
+        }
+    }
 
     &-panel {
         padding: 0 18px;
@@ -18,20 +40,5 @@
         transition: max-height 0.2s ease-out;
     }
 
-    .active, 
-    &:hover {
-        background-color: #ccc;
-    }
 
-    &::after {
-        content: "\2796";
-        font-size: 13px;
-        color: #777;
-        float: right;
-        margin-left: 5px;
-    }
-    
-    &:not(.active)::after {
-        content: '\02795';
-    }
 }
