--- a/resources/scss/blocks/_accordions.scss
+++ b/resources/scss/blocks/_accordions.scss
@@ -1,9 +1,14 @@
 /* Style the buttons that are used to open and close the accordion panel */
 .product__accordion {
+    display: grid;
+    grid-template-columns: calc(10% - 20px) 1fr calc(10% - 20px);
 
     &-button {
-        background-color: #eee;
-        color: #444;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        grid-column: 2;
+        background: #fff;
         cursor: pointer;
         padding: 18px;
         width: 100%;
@@ -11,15 +16,18 @@
         border: none;
         outline: none;
         transition: 0.4s;
-
-        .active, 
-        &:hover {
-            background-color: #ccc;
+        font-size: 20px;
+        color: #4d4d4d;
+        
+        &:nth-child(3) {
+            border-block: 1px solid #9f938b;
         }
+        // .active, 
+        // &:hover {
+        // }
     
         &::after {
             content: "\2212";
-            font-size: 13px;
             color: #777;
             float: right;
             margin-left: 5px;
@@ -33,12 +41,13 @@
     }
 
     &-panel {
+        grid-column: 2;
         padding: 0 18px;
-        background-color: white;
         max-height: 0;
+        font-size: 14px;
+        font-weight: 200;
         overflow: hidden;
         transition: max-height 0.2s ease-out;
+        color: #4d4d4d;
     }
-
-
 }
