Working on slider

--- a/resources/scss/blocks/_header.scss
+++ b/resources/scss/blocks/_header.scss
@@ -1,11 +1,11 @@
 body {
     margin: 0;
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
 .product__container {
     min-width: 21em;
-    
 }
 
 /* Header */
