--- a/resources/scss/blocks/_accordions.scss
+++ b/resources/scss/blocks/_accordions.scss
@@ -1,4 +1,3 @@
-/* Style the buttons that are used to open and close the accordion panel */
 .product__accordion {
     display: grid;
     grid-template-columns: calc(10% - 20px) 1fr calc(10% - 20px);
@@ -10,7 +9,7 @@
         grid-column: 2;
         background: #fff;
         cursor: pointer;
-        padding: 18px;
+        padding: 18px 0 18px 0;
         width: 100%;
         text-align: left;
         border: none;
@@ -22,10 +21,7 @@
         &:nth-child(3) {
             border-block: 1px solid #9f938b;
         }
-        // .active, 
-        // &:hover {
-        // }
-    
+
         &::after {
             content: "\2212";
             color: #777;
@@ -42,7 +38,6 @@
 
     &-panel {
         grid-column: 2;
-        padding: 0 18px;
         max-height: 0;
         font-size: 14px;
         font-weight: 200;
