Working on slider

--- a/resources/scss/blocks/_gallery.scss
+++ b/resources/scss/blocks/_gallery.scss
@@ -6,9 +6,8 @@
     &-items {
         width: 100%;
         display: grid;
-        grid-template-columns: auto auto auto;
+        grid-template-columns: auto auto;
         grid-gap: 20px;
-        padding: 10px;
         flex: none;
 
         img {
