--- a/resources/scss/blocks/_swiper-slider.scss
+++ b/resources/scss/blocks/_swiper-slider.scss
@@ -1,6 +1,8 @@
 .swiper {
   width: 90%;
   height: 100%;
+  margin-top: 3em;
+  grid-area: swiper;
 }
 
 .swiper-slide {
@@ -17,4 +19,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+h2 {
+  text-align: center;
+  color: #4d4d44;
+  font-size: 24px;
+  font-weight: 300;
+  margin-bottom: 3em;
 }
